@@ -20,6 +20,10 @@
 			<dd><input type="text" name="tx_community[groupName]" value="" /></dd>
 		</dl>
 		<dl>
+			<dt>###LLL:creategroup_description###</dt>
+			<dd><textarea name="tx_community[groupDescription]"></textarea></dd>
+		</dl>
+		<dl>
 			<dt>###LLL:creategroup_type###</dt>
 			<dd>
 				<input type="radio" name="tx_community[groupType]" value="0" checked="checked" />
