@@ -1,6 +1,7 @@
 2008-10-06 Ingo Renner  <ingo@typo3.org>
 
 	* changed the name of the general sttings branch in TS ffrom common to general
+	* added a description field to the create group application
 
 2008-10-06 Frank Naegler  <typo3@naegler.net>
 
